--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ time = { version = "0.3.29", features = ["parsing", "serde"] }
 tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "macros"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
