--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -14,6 +14,10 @@
 			The presented content is provided directly by the respective television services, this
 			program only facilitates finding and accessing the shows.
 		</p>
+		<p>
+			For video playback, Televido uses external video players that are installed on the
+			user's system. Currently supported players: GNOME Videos (Totem), Celluloid, Clapper.
+		</p>
 	</description>
 	<launchable type="desktop-id">io.github.d_k_bo.Televido.desktop</launchable>
 	<screenshots>
