--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: televido.flatpak
-          manifest-path: build-aux/de.k_bo.Televido.json
+          manifest-path: build-aux/de.k_bo.Televido.Devel.json
           cache-key: flatpak-builder-${{ github.sha }}
