Replace outdated app id in appstream metadata

--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
-	<id>io.github.d_k_bo.Televido</id>
+	<id>de.k_bo.Televido</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<name>Televido</name>
@@ -19,7 +19,7 @@
 			user's system. Currently supported players: GNOME Videos (Totem), Celluloid, Clapper.
 		</p>
 	</description>
-	<launchable type="desktop-id">io.github.d_k_bo.Televido.desktop</launchable>
+	<launchable type="desktop-id">de.k_bo.Televido.desktop</launchable>
 	<screenshots>
 		<screenshot type="default">
 			<image>https://raw.githubusercontent.com/d-k-bo/televido/main/data/screenshots/1.png</image>
