Setup translations properly
televido.pot is generated using `meson compile televido-pot`.
it throws a bunch of warning because Blueprint and Rust are unsupported
by xgettext, but it seems to work fine using the C parser.

de.po is updated using `meson compile televido-update-po`.

See also https://mesonbuild.com/i18n-module.html#i18ngettext

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,31 @@
 data/de.k_bo.Televido.desktop.in
-data/de.k_bo.Televido.metainfo.xml.in
 data/de.k_bo.Televido.gschema.xml
+data/de.k_bo.Televido.metainfo.xml.in
+src/application.rs
+src/config.rs
+src/help-overlay.blp
+src/launcher/application_proxy.rs
+src/launcher/mod.rs
 src/launcher/selector.blp
 src/launcher/selector.rs
 src/live/card.blp
+src/live/card.rs
+src/live/channels.rs
+src/live/mod.rs
 src/live/view.blp
+src/live/view.rs
+src/live/zapp.rs
+src/main.rs
 src/mediathek/card.blp
+src/mediathek/card.rs
+src/mediathek/channels.rs
+src/mediathek/mod.rs
+src/mediathek/shows.rs
 src/mediathek/view.blp
-src/help-overlay.blp
+src/mediathek/view.rs
 src/preferences.blp
+src/preferences.rs
+src/settings.rs
 src/utils.rs
 src/window.blp
+src/window.rs
