--- a/po/meson.build
+++ b/po/meson.build
@@ -1,1 +1,5 @@
-i18n.gettext(meson.project_name(), preset: 'glib')
+i18n.gettext(
+    meson.project_name(),
+    preset: 'glib',
+    args: ['--msgid-bugs-address', CONFIG['ISSUE_URL']],
+)
