--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -53,5 +53,10 @@
 				<p>Initital release</p>
 			</description>
 		</release>
+		<release version="0.1.1" date="2023-10-26">
+			<description>
+				<p>If an error occurs, a graphical error message is shown.</p>
+			</description>
+		</release>
 	</releases>
 </component>
