--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -42,6 +42,7 @@
 	<content_rating type="oars-1.1" />
 	<requires>
 		<internet>always</internet>
+		<display_length compare="ge">360</display_length>
 	</requires>
 	<supports>
 		<control>pointing</control>
