--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -50,6 +50,13 @@
 		<control>touch</control>
 	</supports>
 	<releases>
+		<release version="0.1.3" date="2023-10-30">
+			<description>
+				<ul>
+					<li>Added support for mobile devices</li>
+				</ul>
+			</description>
+		</release>
 		<release version="0.1.2" date="2023-10-29">
 			<description>
 				<ul>
