FIx linter warnings

--- a/src/meson.build
+++ b/src/meson.build
@@ -40,7 +40,7 @@ else
   rust_target = 'debug'
 endif
 
-cargo_build = custom_target(
+custom_target(
   'cargo-build',
   build_by_default: true,
   build_always_stale: true,
