--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@ data/de.k_bo.Televido.desktop.in
 data/de.k_bo.Televido.gschema.xml
 data/de.k_bo.Televido.metainfo.xml.in
 src/application.rs
+src/channel_icons.rs
 src/config.rs
 src/help-overlay.blp
 src/launcher/application_proxy.rs
@@ -14,18 +15,23 @@ src/live/channels.rs
 src/live/mod.rs
 src/live/view.blp
 src/live/view.rs
-src/live/zapp.rs
 src/main.rs
 src/mediathek/card.blp
 src/mediathek/card.rs
-src/mediathek/channels.rs
 src/mediathek/mod.rs
 src/mediathek/shows.rs
 src/mediathek/view.blp
 src/mediathek/view.rs
-src/preferences.blp
-src/preferences.rs
+src/preferences/dialog.blp
+src/preferences/dialog.rs
+src/preferences/live/mod.rs
+src/preferences/live/selector.blp
+src/preferences/live/selector_row.blp
+src/preferences/live/selector_row.rs
+src/preferences/live/selector.rs
+src/preferences/mod.rs
 src/settings.rs
 src/utils.rs
 src/window.blp
 src/window.rs
+src/zapp.rs
