--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: d-k-bo <d-k-bo@mailbox.org>
+# SPDX-License-Identifier: CC0-1.0
+
 configure_file(
   input: 'config.rs.in',
   output: 'config.rs',
