--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ gtk = { version = "0.8.1", package = "gtk4", features = ["gnome_46", "blueprint"
 gvdb-macros = "0.1.12"
 html2pango = "0.6.0"
 indexmap = { version = "2.2.6", features = ["serde"] }
-mediathekviewweb = "0.3.0"
+mediathekviewweb = { version = "0.3.1" }
 once_cell = "1.19.0"
 phf = { version = "0.11.2", features = ["macros"] }
 reqwest = { version = "0.12.2", features = ["json"] }
