Update release notes

--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -57,6 +57,15 @@
 		<control>touch</control>
 	</supports>
 	<releases>
+		<release version="0.4.0" type="development" date="2024-06-22">
+			<description>
+				<ul>
+					<li>Allow removing and reordering live channels</li>
+					<li>Add option to copy subtitles URL</li>
+					<li>Use MediathekViewWeb's advanced search syntax</li>
+				</ul>
+			</description>
+		</release>
 		<release version="0.3.0" date="2024-03-28">
 			<description>
 				<ul>
