--- a/data/de.k_bo.Televido.metainfo.xml.in
+++ b/data/de.k_bo.Televido.metainfo.xml.in
@@ -57,7 +57,7 @@
 		<control>touch</control>
 	</supports>
 	<releases>
-		<release version="0.4.0" type="development" date="2024-06-22">
+		<release version="0.4.0" date="2024-06-25">
 			<description>
 				<ul>
 					<li>Allow removing and reordering live channels</li>
