--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 smart-default = "0.7.1"
 time = { version = "0.3.36", features = ["parsing", "serde"] }
-tokio = { version = "1.40.0", features = ["time", "rt-multi-thread", "macros"] }
+tokio = { version = "1.40.0", features = ["fs", "time", "rt-multi-thread", "macros"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
