Generate AboutDialog from appdata

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /subprojects/blueprint-compiler
 /data/gschemas.compiled
 /data/resources/gtk/help-overlay.ui
+/data/resources/de.k_bo.Televido.metainfo.xml
